Deploy ready: env vars, CORS fix, health check, Render + Netlify configs
- application.properties: all secrets use env var placeholders with fallbacks
- MongoConfig.java: reads URI/DB from @Value (supports MONGODB_URI env var on Render)
- SecurityConfig.java: CORS fixed with allowedOriginPatterns (credentials + wildcard)
- AuthController.java: added GET /api/auth/health for Render health checks
- render.yaml: Render deployment config with all required env vars listed
- netlify.toml: fixed build command, publish dir, VITE_API_URL for Netlify
- backend/.env.example: deployment guide with all required variables